[package]
name = "wtf-rlsr"
version = "1.1.1"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"
description = "Cargo workspace and GIT release tool."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wtf-rlsr"
path = "bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
cargo = "^0.41.0"
git2 = "^0.10.0"
dialoguer = "^0.5.0"
console = "^0.9.1"
colored = "^1.6.0"
dirs = "^2.0.2"
glob = "^0.3.0"
structopt = "^0.3.0"
semver = "^0.9.0"
toml = "^0.5.3"
hashbrown = "^0.6.3"
failure = "^0.1.6"
log = "^0.4.8"
pretty_env_logger = "^0.3.1"
fs_extra = "^1.1.0"
which = "3.1.0"
pathdiff = "0.1.0"
syn = { version = "^1.0.12", features = ["full", "visit"] }
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
